added a new string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Red Rewards</string>
+    <string name="welcomeMessage">Welcome, Red Rewards User!</string>
 </resources>
