added launcher Icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Red Rewards</string>
+    <string name="app_name">RED Rewards</string>
     <string name="welcomeMessage">Welcome, R.E.D. Rewards User!</string>
 </resources>
