added a new activity - socialfeeder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RED Rewards</string>
     <string name="welcomeMessage">Welcome, R.E.D. Rewards User!</string>
+    <string name="title_activity_social_feeder">SocialFeeder</string>
 </resources>
