--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
-    <string name="app_name">RED Rewards</string>
+    <string name="app_name">Red Rewards</string>
     <string name="welcomeMessage">Welcome, R.E.D. Rewards User!</string>
+    <string name="title_activity_store">StoreActivity</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="storeWelcome">Welcome to the R.E.D. rewards store!</string>
+    <string name="storeDescription">Exchange points for merch</string>
+    <string name="pointViewLabel">Your points:</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
