--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,11 @@
         <item>Pluto</item>
     </string-array>
 
+    <string-array name="storeitemlist">
+        <item>
+            <string>TSHIRT</string>
+            <desc>A standard RED T-Shirt</desc>
+        </item>
+    </string-array>
+
 </resources>
