--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,8 +63,8 @@
     <string name="action_log_out">log out</string>
 
 
-    <string name="com.twitter.sdk.android.CONSUMER_KEY">oZHrSdoZdyCw5mhxqaE6WkydA</string>
-    <string name="com.twitter.sdk.android.CONSUMER_SECRET">e8qN32EFCPgOVT2tQ9WGwzoYiIvdVyqngJAaAeWj2RKItPctFr</string>
+    <string name="com.twitter.sdk.android.CONSUMER_KEY"></string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET"></string>
 
 
 </resources>
