added temporary point earning button. updated points tab to display user points

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
 
     <string name="points_how_to_get">how to get points:\nAttend Events\nrepost a post on social media</string>
     <string name="points_amount_display">points:</string>
+    <string name="earn_points">Earn Points</string>
 
 
 </resources>
